Add state options Add projection state option

--- a/packages/dummies/teapots/kookaburra.yml
+++ b/packages/dummies/teapots/kookaburra.yml
@@ -12,3 +12,7 @@ state:
         type: string
         enum: [glass, metal]
     required: [name, volume]
+  collection:
+    projection: [name]
+  object:
+    projection: [name, volume, material]
