Add omit/select options

--- a/packages/dummies/teapots/kookaburra.yml
+++ b/packages/dummies/teapots/kookaburra.yml
@@ -13,6 +13,10 @@ state:
         enum: [glass, metal]
     required: [name, volume]
   collection:
+    select:
+      default: 1
+      limit: 3
+    omit: 1000
     projection: [name]
   object:
     projection: [name, volume, material]
