--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -9,9 +9,8 @@
   "dependencies": {
     "@kookaburra/explorer": "^0.0.1",
     "@kookaburra/runtime": "^0.0.1",
-    "@kookaburra/state.connector.mongodb": "^0.0.1"
-  },
-  "devDependencies": {
+    "@kookaburra/state.connector.mongodb": "^0.0.1",
+    "@kookaburra/templates": "^0.0.1",
     "clone": "^2.1.2"
   }
 }
