--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -11,6 +11,7 @@
     "@kookaburra/runtime": "^0.0.1",
     "@kookaburra/state.connector.mongodb": "^0.0.1",
     "@kookaburra/templates": "^0.0.1",
+    "@kookaburra/http": "^0.0.1",
     "clone": "^2.1.2"
   }
 }
