--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "serve-favicon": "^2.5.0"
   }
 }
