--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@kookaburra/explorer": "^0.0.1",
     "@kookaburra/runtime": "^0.0.1",
-    "@kookaburra/state.connector.mongodb": "^0.0.1",
+    "@kookaburra/state.mongodb": "^0.0.1",
     "@kookaburra/templates": "^0.0.1",
     "@kookaburra/http": "^0.0.1",
     "clone": "^2.1.2"
