--- a/packages/dummies/messages/kookaburra.yml
+++ b/packages/dummies/messages/kookaburra.yml
@@ -1,4 +1,5 @@
 domain: messages
+transport: amqp
 
 state:
   schema:
@@ -6,20 +7,22 @@ state:
       sender: string
       recipient: string
       text: string
-      sent:
-        type: boolean
-        default: false
+      status:
+        type: string
+        enum: [ pending, sent, received, seen ]
+        defaut: pending
 
 operations:
   find:
     template: ~
-  add: ~
   send:
+    http: /
     schema:
       properties:
         sender: ~
         recipient: ~
         text: ~
+      required: [ sender, recipient, text ]
 
 remotes:
   - ../credits.accounts
