Add input query parameters

--- a/packages/dummies/messages/kookaburra.yml
+++ b/packages/dummies/messages/kookaburra.yml
@@ -16,7 +16,7 @@ operations:
   find:
     template: ~
   send:
-    http: /
+    http: /{.sender}/{.recipient}
     schema:
       properties:
         sender: ~
