--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@jest/globals": "26.6.2",
     "babel-eslint": "10.1.0",
     "husky": "5.0.9",
     "jest": "26.6.3",
@@ -15,7 +16,7 @@
   },
   "scripts": {
     "test": "standard --env jest --verbose | snazzy && NODE_OPTIONS=--experimental-vm-modules jest",
-    "fix": "standard --env jest --fix",
+    "fix": "standard --env jest --fix --verbose | snazzy",
     "prepare": "husky install"
   },
   "standard": {
