--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "standard": "16.0.3"
   },
   "scripts": {
-    "test": "standard --verbose | snazzy && NODE_OPTIONS=--experimental-vm-modules jest",
-    "lint": "standard --verbose --fix",
+    "test": "standard --verbose | snazzy && NODE_OPTIONS='--experimental-vm-modules --no-warnings' jest",
+    "lint": "standard --verbose --fix | snazzy",
     "prepare": "husky install"
   },
   "standard": {
