refactor: minor code style

--- a/packages/dummies/simple/kookaburra.yaml
+++ b/packages/dummies/simple/kookaburra.yaml
@@ -1,10 +1,1 @@
-domain: tests
-name: loader
-
-state:
-  schema:
-    properties:
-      filename:
-        type: stirng
-      size:
-        type: number
+name: simple
