--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kookaburra/runtime",
   "version": "0.0.0",
-  "description": "Kookaburra Component Runtime",
+  "description": "Kookaburra core abstractions",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/kookaburra#readme",
   "repository": {
