--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/eslint-parser": "7.13.8",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-private-methods": "7.13.0",
     "@jest/globals": "26.6.2",
-    "babel-eslint": "10.1.0",
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lerna": "3.22.1",
@@ -19,7 +21,7 @@
     "prepare": "husky install"
   },
   "standard": {
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "env": {
       "jest": true
     }
