--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@babel/eslint-parser": "7.13.8",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-proposal-private-methods": "7.13.0",
-    "@jest/globals": "26.6.2",
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lerna": "3.22.1",
+    "randomstring": "1.1.5",
     "snazzy": "9.0.0",
     "standard": "16.0.3"
   },
@@ -27,6 +27,8 @@
     }
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>/jest.setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
