--- a/packages/package/package.json
+++ b/packages/package/package.json
@@ -26,7 +26,6 @@
     "js-yaml": "4.0.0"
   },
   "devDependencies": {
-    "@kookaburra/dummies": "^0.0.0",
-    "jest-mock-console": "^1.0.1"
+    "@kookaburra/dummies": "^0.0.0"
   }
 }
