refactor: Change @kookaburra dependencies versions to soft

--- a/packages/boot/package.json
+++ b/packages/boot/package.json
@@ -19,11 +19,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@kookaburra/http": "0.0.0",
+    "@kookaburra/http": "^0.0.0",
     "@kookaburra/package": "^0.0.0",
     "@kookaburra/runtime": "^0.0.0"
   },
   "devDependencies": {
-    "@kookaburra/dummies": "0.0.0"
+    "@kookaburra/dummies": "^0.0.0"
   }
 }
