--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -19,8 +19,8 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@kookaburra/gears": "0.0.0",
-    "@kookaburra/runtime": "0.0.0",
+    "@kookaburra/gears": "^0.0.0",
+    "@kookaburra/runtime": "^0.0.0",
     "express": "4.17.1",
     "serve-favicon": "2.5.0",
     "server-destroy": "1.0.1"
