fix(package): Fix system properties schema

--- a/packages/package/src/validation/schemas/system.yaml
+++ b/packages/package/src/validation/schemas/system.yaml
@@ -13,4 +13,4 @@ properties:
   _version:
     type: integer
     default: 0
-required: [_id, _created, _updated, _deleted]
+required: [_id, _created, _version]
