--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@kookaburra/gears": "^0.0.0",
+    "@rsql/parser": "1.0.3",
     "ajv": "7.1.1",
     "deep-freeze": "0.0.1"
   },
