--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -22,6 +22,7 @@
     "@kookaburra/gears": "^0.0.0",
     "@rsql/parser": "1.0.3",
     "ajv": "7.1.1",
+    "ajv-merge-patch": "4.1.0",
     "deep-freeze": "0.0.1"
   },
   "devDependencies": {
