feat(package): Add query validation

--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@kookaburra/gears": "^0.0.0",
     "@rsql/parser": "1.0.3",
-    "ajv": "7.1.1"
+    "ajv": "7.1.1",
+    "ajv-formats": "1.5.1"
   },
   "devDependencies": {
     "clone-deep": "4.0.1"
