--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/eslint-parser": "7.13.8",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-proposal-private-methods": "7.13.0",
+    "clone-deep": "4.0.1",
     "husky": "5.0.9",
     "jest": "26.6.3",
     "lerna": "3.22.1",
