--- a/packages/dummies/messages/kookaburra.yaml
+++ b/packages/dummies/messages/kookaburra.yaml
@@ -6,3 +6,11 @@ entity:
     properties:
       text: string
 
+operations:
+  - name: add
+    input:
+      type: object # TODO
+      properties:
+        text:
+          type: string
+      required: [text]
