--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,8 @@
   "npmClient": "yarn",
   "useWorkspaces": true,
   "packages": [
-    "packages/*"
+    "packages/*",
+    "connectors/*"
   ],
   "version": "0.0.0"
 }
