--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -24,5 +24,6 @@
     "express": "4.17.1",
     "serve-favicon": "2.5.0",
     "server-destroy": "1.0.1"
-  }
+  },
+  "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
 }
