--- a/packages/package/package.json
+++ b/packages/package/package.json
@@ -24,5 +24,6 @@
     "glob": "7.1.6",
     "glob-promise": "4.0.1",
     "js-yaml": "4.0.0"
-  }
+  },
+  "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
 }
