--- a/packages/runtime/src/io/error.yaml
+++ b/packages/runtime/src/io/error.yaml
@@ -3,8 +3,8 @@ type: object
 properties:
   code:
     type: integer
-    minimum: 1
-    maximum: 99
+#    minimum: 1
+#    maximum: 99
   message:
     type: string
 additionalProperties: true
