--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -19,8 +19,7 @@
     }
   },
   "peerDependencies": {
-    "@kookaburra/storage": "^0.0.0",
-    "@kookaburra/gears": "^0.0.0"
+    "@kookaburra/storage": "^0.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.13.8",
@@ -30,5 +29,8 @@
     "jest": "26.6.3",
     "snazzy": "9.0.0",
     "standard": "16.0.3"
+  },
+  "dependencies": {
+    "mongodb": "^4.1.0"
   }
 }
