--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -1,22 +1,25 @@
 {
   "name": "@kookaburra/storages.mongodb",
   "version": "0.0.0",
-  "private": true,
-  "description": "Kookaburra Storage Connector for MongoDB",
-  "main": "src/index.js",
-  "repository": "git@github.com:quantumducks/kookaburra-storage-mongodb.git",
+  "description": "MongoDB Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "test": "standard --verbose | snazzy && jest",
-    "lint": "standard --verbose --fix | snazzy",
-    "prepare": "husky install"
+  "homepage": "https://github.com/quantumducks/kookaburra#readme",
+  "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/quantumducks/kookaburra.git"
   },
-  "standard": {
-    "parser": "@babel/eslint-parser",
-    "env": {
-      "jest": true
-    }
+  "bugs": {
+    "url": "https://github.com/quantumducks/kookaburra/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "scripts": {
+    "test": "echo \"Error: run tests from root\" && exit 1"
+  },
+  "dependencies": {
+    "mongodb": "^4.1.0"
   },
   "peerDependencies": {
     "@kookaburra/storage": "^0.0.0"
@@ -29,8 +32,5 @@
     "jest": "26.6.3",
     "snazzy": "9.0.0",
     "standard": "16.0.3"
-  },
-  "dependencies": {
-    "mongodb": "^4.1.0"
   }
 }
