feat: Add collection observation

--- a/packages/dummies/messages/kookaburra.yaml
+++ b/packages/dummies/messages/kookaburra.yaml
@@ -28,3 +28,7 @@ operations:
       properties:
         text: string
       required: [text]
+  - name: find
+    output:
+      properties:
+        messages: array
