--- a/packages/dummies/messages/manifest.yaml
+++ b/packages/dummies/messages/manifest.yaml
@@ -19,6 +19,7 @@ operations:
       required: [id]
   - name: get
     output:
+      type: [object, "null"]
       properties:
         id: string
         text: string
