--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^4.1.0"
   },
   "peerDependencies": {
+    "@kookaburra/gears": "^0.0.0",
     "@kookaburra/storage": "^0.0.0"
   },
   "devDependencies": {
