--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb-memory-server": "7.3.6",
     "randomstring": "1.1.5",
     "snazzy": "9.0.0",
-    "standard": "16.0.3"
+    "standard": "16.0.3",
+    "superagent": "6.1.0"
   },
   "scripts": {
     "test": "standard --verbose | snazzy && jest",
@@ -32,6 +33,8 @@
     }
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>/test/setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.js"
+    ]
   }
 }
