chore: Remove @kookaburra/storage, replace nanoid with uuid

--- a/packages/runtime/src/io/error.yaml
+++ b/packages/runtime/src/io/error.yaml
@@ -1,11 +1,9 @@
-$id: http://schemas.kookaburra.dev/runtime/io/error.schema.json
-type: object
 properties:
   code:
     type: integer
-#    minimum: 1
-#    maximum: 99
+    minimum: 0
+    maximum: 999
+    default: 0
   message:
     type: string
-additionalProperties: true
 required: [code]
