--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -23,7 +23,7 @@
   },
   "peerDependencies": {
     "@kookaburra/gears": "^0.0.0",
-    "@kookaburra/storage": "^0.0.0"
+    "@kookaburra/runtime": "^0.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.13.8",
