--- a/connectors/storages.mongodb/package.json
+++ b/connectors/storages.mongodb/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kookaburra/storages.mongodb",
   "version": "0.0.0",
-  "description": "MongoDB Storage Connector",
+  "description": "Kookaburra MongoDB Storage Connector",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/kookaburra#readme",
   "main": "src/index.js",
