--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
-version: "3.9"
+version: '3.9'
 services:
   rabbitmq:
     image: rabbitmq:3.9.5-management-alpine
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - '5672:5672'
+      - '15672:15672'
   mongodb:
     image: mongo:5.0.2
