--- a/runtime/schema/package.json
+++ b/runtime/schema/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/quantumducks/kookaburra/issues"
   },
-  "main": "src/index.js",
+  "main": "src/schema.js",
   "dependencies": {
     "ajv": "8.6.2",
     "ajv-keywords": "5.0.0"
