--- a/package.json
+++ b/package.json
@@ -32,8 +32,14 @@
     }
   },
   "jest": {
-    "roots": ["<rootDir>/runtime", "<rootDir>/connectors", "<rootDir>/integration"],
-    "testMatch": ["**/?(*.)+(test).js"],
+    "roots": [
+      "<rootDir>/runtime",
+      "<rootDir>/connectors",
+      "<rootDir>/integration"
+    ],
+    "testMatch": [
+      "**/?(*.)+(test).js"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/jest.setup.js"
     ]
