--- a/runtime/cli/package.json
+++ b/runtime/cli/package.json
@@ -21,14 +21,14 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@kookaburra/boot": "^0.0.0",
+    "@kookaburra/core": "^0.0.0",
     "@kookaburra/gears": "^0.0.0",
-    "@kookaburra/package": "^0.0.0",
+    "@kookaburra/package": "^0.0.0"
+  },
+  "dependencies": {
     "find-up": "5.0.0",
-    "fs-extra": "9.1.0",
-    "js-yaml": "4.0.0",
-    "relaxed-json": "^1.0.3",
     "yargs": "16.2.0"
   },
   "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
