feat: Add prototypes

--- a/integration/dummies/messages/manifest.yaml
+++ b/integration/dummies/messages/manifest.yaml
@@ -49,5 +49,5 @@ operations:
       required: [ sender, text ]
     output:
       properties:
-        id: ~
+        ok: string
       required: [ id ]
