--- a/runtime/prototype/package.json
+++ b/runtime/prototype/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kookaburra/package",
+  "name": "@kookaburra/prototype",
   "version": "0.0.0",
-  "description": "Kookaburra Package",
+  "description": "Kookaburra Generic Prototype",
   "author": "temich <tema.gurtovoy@gmail.com>",
   "homepage": "https://github.com/quantumducks/kookaburra#readme",
   "repository": {
@@ -11,17 +11,11 @@
   "bugs": {
     "url": "https://github.com/quantumducks/kookaburra/issues"
   },
-  "main": "src/manifest.js",
+  "main": "package.json",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  },
-  "dependencies": {
-    "@kookaburra/gears": "^0.0.0",
-    "@kookaburra/prototype": "^0.0.0",
-    "@kookaburra/schema": "^0.0.0"
-  },
-  "gitHead": "453937d5174bac66b3152cda8ed0cf1ed4fab5f9"
+  }
 }
