--- a/runtime/schema/src/definitions.yaml
+++ b/runtime/schema/src/definitions.yaml
@@ -1,7 +1,9 @@
-$schema: http://json-schema.org/draft-07/schema
+$schema: https://json-schema.org/draft/2019-09/schema
 $id: https://schemas.kookaburra.dev/0.0.0/definitions
 
 definitions:
+  schema:
+    $ref: https://json-schema.org/draft/2019-09/schema
   token:
     type: string
     pattern: ^[a-zA-Z]+([_-a-zA-Z0-9]*[a-zA-Z0-9]+)?$
