--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev": "docker compose up -d",
     "test": "jest",
     "lint": "standard --verbose --fix | snazzy",
+    "install": "./node_modules/.bin/lerna bootstrap --ignore-scripts",
     "prepare": "husky install"
   },
   "standard": {
